[DANIL] last-commit

--- a/src/app/_exchange/step3-3/step3-3.component.html
+++ b/src/app/_exchange/step3-3/step3-3.component.html
@@ -56,7 +56,7 @@
     <div class="form-btn between-children">
       <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="goToBack($event)">Back</a>
       <label>
-        <button class="btn btn-accent rippler rippler-default" [disabled]="codeForm.controls['code'].hasError('required') || codeForm.controls['code'].hasError('maxlength')" >Verify e-mail</button>
+        <button class="btn btn-accent rippler rippler-default" [disabled]="codeForm.controls['code'].hasError('required') || codeForm.controls['code'].hasError('maxlength')" >Verify phone</button>
       </label>
     </div>
   </form>
