--- a/src/app/_footer/footer/footer.component.html
+++ b/src/app/_footer/footer/footer.component.html
@@ -13,18 +13,20 @@
                   <li><a href="#">{{ 'header.dropdown-data1' | translate }}</a></li>
                   <li><a href="#">{{ 'header.dropdown-data2' | translate }}</a></li>
                   <li><a href="#">{{ 'header.dropdown-data3' | translate }}</a></li>
-                  <li><a routerLink="/feesdiscount">{{ 'feesdiscount' | translate }}</a></li>
-                  <li><a routerLink="/faq">{{ 'header.faq' | translate }}</a></li>
-                  <li><a routerLink="/news">{{ 'header.news' | translate }}</a></li>
-                  <li></li>
-                  <li><a routerLink="/landingmagazine">{{ 'header.landingmagazine' | translate }}</a></li>
-                  <li><a routerLink="/tablehistory">{{ 'header.tablehistory' | translate }}</a></li>
-                  <li><a routerLink="/tablehistoryreviews">{{ 'header.tablehistoryreviews' | translate }}</a></li>
-                  <li><a routerLink="/transactions">{{ 'header.transactions' | translate }}</a></li>
-                  <li><a routerLink="/partners">{{ 'header.partners' | translate }}</a></li>
-                  <li><a routerLink="/user/settings">{{ 'header.user-settings' | translate }}</a></li>
-                  <li><a routerLink="/prepaid-card">{{ 'header.prepaid-card' | translate }}</a></li>
-                  <li><a routerLink="/discount">{{ 'header.discount' | translate }}</a></li>
+                  <li><a routerLink="/feesdiscount" >{{ 'header.feesdiscount' | translate }}</a></li>
+
+
+                  <!--<li><a routerLink="/faq">{{ 'header.faq' | translate }}</a></li>-->
+                  <!--<li><a routerLink="/news">{{ 'header.news' | translate }}</a></li>-->
+                  <!--<li></li>-->
+                  <!--<li><a routerLink="/landingmagazine">{{ 'header.landingmagazine' | translate }}</a></li>-->
+                  <!--<li><a routerLink="/tablehistory">{{ 'header.tablehistory' | translate }}</a></li>-->
+                  <!--<li><a routerLink="/tablehistoryreviews">{{ 'header.tablehistoryreviews' | translate }}</a></li>-->
+                  <!--<li><a routerLink="/transactions">{{ 'header.transactions' | translate }}</a></li>-->
+                  <!--<li><a routerLink="/partners">{{ 'header.partners' | translate }}</a></li>-->
+                  <!--<li><a routerLink="/user/settings">{{ 'header.user-settings' | translate }}</a></li>-->
+                  <!--<li><a routerLink="/prepaid-card">{{ 'header.prepaid-card' | translate }}</a></li>-->
+                  <!--<li><a routerLink="/discount">{{ 'header.discount' | translate }}</a></li>-->
                 </ul>
               </li>
             </ul>
@@ -35,7 +37,7 @@
               <li><a routerLink="#">Terms and conditions</a></li>
               <li><a routerLink="#">AML policy</a></li>
               <li><a routerLink="#">Privacy policy</a></li>
-              <li><a routerLink="#">Fees & discounts</a></li>
+              <li><a routerLink="/feesdiscount">{{ 'header.feesdiscount' | translate }}</a></li>
             </ul>
           </div>
 
