--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -65,8 +65,7 @@
 
                   <div class="item" id="account">
                     <div class="item__head title-inner ">What is account in Smartex Exchange and why do I need it?</div>
-                    <div class="item__content"><p class="pre-line">Account in Smartex Exchange is your virtual offcie where you can see everything aboutyour activity on Smartex.info.
-                      You need to have an account to connect your payments with your person according to relevant laws.</p></div>
+                    <div class="item__content"><p class="pre-line">Account in Smartex Exchange is your virtual offcie where you can see everything aboutyour activity on Smartex.info. You need to have an account to connect your payments with your person according to relevant laws.</p></div>
                   </div>
 
                   <div class="item" id="check_order">
@@ -77,8 +76,7 @@
 
                   <div class="item" id="cancel_order">
                     <div class="item__head title-inner">Can I cancel my order?</div>
-                    <div class="item__content"><p class="pre-line">If the order is not completed, you can cancel it by contacting support. Please provide the reason you wish to cancel the order.
-                      Once the order is completed and payment is sent, it is not possible to cancel the order and refund it.</p></div>
+                    <div class="item__content"><p class="pre-line">If the order is not completed, you can cancel it by contacting support. Please provide the reason you wish to cancel the order. Once the order is completed and payment is sent, it is not possible to cancel the order and refund it.</p></div>
                   </div>
 
                 </div>
