--- a/src/app/landing-magazine/landing-magazine.component.html
+++ b/src/app/landing-magazine/landing-magazine.component.html
@@ -17,28 +17,28 @@
           <div class="advantages blank-self tape-top">
             <div class="item">
               <div class="item-icons">
-                <img src="../assets/img/adv-icons1.png" alt="Staňte se doporučitelem">
+                <img src="../assets/img/adv-icons2.png" alt="Staňte se velkoodběratele">
               </div>
-              <div class="item-title"><span class="pre-line">{{ 'become-partner.block1-text1' | translate }}</span></div>
+              <a href="#block1" class="item-title"><span class="pre-line">{{ 'become-partner.block1-text2' | translate }}</span></a>
             </div>
 
             <div class="item">
               <div class="item-icons">
-                <img src="../assets/img/adv-icons2.png" alt="Staňte se velkoodběratele">
+                <img src="../assets/img/adv-icons1.png" alt="Staňte se doporučitelem">
               </div>
-              <div class="item-title"><span class="pre-line">{{ 'become-partner.block1-text2' | translate }}</span></div>
+              <a href="#block2"  class="item-title"><span class="pre-line">{{ 'become-partner.block1-text1' | translate }}</span></a>
             </div>
 
             <div class="item">
               <div class="item-icons">
                 <img src="../assets/img/adv-icons3.png" alt="Otevřete si směnárnu">
               </div>
-              <div class="item-title"><span class="pre-line">{{ 'become-partner.block1-text3' | translate }}</span></div>
+              <a href="#block3"  class="item-title"><span class="pre-line">{{ 'become-partner.block1-text3' | translate }}</span></a>
             </div>
           </div>
 
           <div class="magazine">
-            <div class="item blank-self">
+            <div id="block1" class="item blank-self">
               <div class="blank-self__head">
                 <h2 class="h2">{{ 'become-partner.block2-title' | translate }}</h2>
               </div>
@@ -56,7 +56,7 @@
               </div>
             </div>
 
-            <div class="item blank-self item_reverse">
+            <div id="block2" class="item blank-self item_reverse">
               <div class="blank-self__head">
                 <h2 class="h2">{{ 'become-partner.block3-title' | translate }}</h2>
               </div>
@@ -75,8 +75,7 @@
               </div>
             </div>
 
-
-            <div class="item blank-self">
+            <div id="block3" class="item blank-self">
               <div class="blank-self__head">
                 <h2 class="h2">{{ 'become-partner.block4-title' | translate }}</h2>
               </div>
