--- a/src/app/partners/partners.component.html
+++ b/src/app/partners/partners.component.html
@@ -21,7 +21,7 @@
                   Náš systém rozpozná,  že váš partner
                   přišel na stránku skrze váš odkaz a automaticky vám <b>přičte provizi</b>, kterou můžete vybrat na jakoukoliv peněženku.
 
-                  Máte další otázky? Podívejte se do sekce <a href="#" class="link">FAQ</a>
+                  Máte další otázky? Podívejte se do sekce <a routerLink="/faq" class="link">FAQ</a>
                   nebo kontaktujte <a href="#" class="link">technickou podporu</a>.
                 </p>
 
