--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -13,7 +13,7 @@
         <img src="../assets/img/satisfaction_guarantee.png" alt="" class="img-left">
         <div class="gratitude-text">
           <hr>
-          <h2 class="h2 pre-line" [innerHTML]="'Contacts.subtitle' | translate"></h2>
+          <h2 class="h2 pre-line" [innerHTML]="'Testimonials.gratitude' | translate"></h2>
         </div>
         <img src="../assets/img/green_shield_check_protected_checked.png" alt="" class="img-right">
       </div>
