--- a/src/app/_exchange/step3-5/step3-5.component.html
+++ b/src/app/_exchange/step3-5/step3-5.component.html
@@ -1,6 +1,6 @@
 <div class="step">
-  <div class="step-title" *ngIf="!userModel.verification_kyc"><h3 class="h3">2. ID verified!</h3></div>
-  <div class="step-title" *ngIf="userModel.verification_kyc"><h3 class="h3">2. ID waiting moderation!</h3></div>
+  <div class="step-title" *ngIf="!userModel.verification_image"><h3 class="h3">2. ID verified!</h3></div>
+  <div class="step-title" *ngIf="userModel.verification_image"><h3 class="h3">2. ID waiting moderation!</h3></div>
 
   <p class="p_small" *ngIf="!userModel.verification_kyc">
     Congratulations! Your identity card was <br>
@@ -67,7 +67,7 @@
             </g>
           </svg>
         </div>
-        <button class="btn btn-accentSecond rippler rippler-default" *ngIf="!userModel.verification_kyc" [disabled]="KycForm.invalid && ngKycForm.submitted">Verify KYC</button>
+        <button class="btn btn-accent rippler rippler-default" *ngIf="!userModel.verification_kyc" [disabled]="KycForm.invalid && ngKycForm.submitted">Verify KYC</button>
         <button type="submit" class="btn btn-accentSecond rippler rippler-default" *ngIf="userModel.verification_kyc" (click)="goToNext($event)">Next</button>
       </label>
     </div>
