--- a/src/app/_header/header/header.component.html
+++ b/src/app/_header/header/header.component.html
@@ -13,22 +13,28 @@
           <li class="dropdown">
             <a href="#" class="dropdown-link js-dropdown-link">{{ 'header.dropdown-link' | translate }}</a>
             <ul class="dropdown-data">
-              <li><a href="#">{{ 'header.dropdown-data1' | translate }}</a></li>
-              <li><a href="#">{{ 'header.dropdown-data2' | translate }}</a></li>
-              <li><a href="#">{{ 'header.dropdown-data3' | translate }}</a></li>
-              <li><a routerLink="/feesdiscount">{{ 'feesdiscount' | translate }}</a></li>
               <li><a routerLink="/faq">{{ 'header.faq' | translate }}</a></li>
               <li><a routerLink="/news">{{ 'header.news' | translate }}</a></li>
-              <li></li>
-              <li><a routerLink="/landingmagazine">{{ 'header.landingmagazine' | translate }}</a></li>
-              <li><a routerLink="/tablehistory">{{ 'header.tablehistory' | translate }}</a></li>
-              <li><a routerLink="/tablehistoryreviews">{{ 'header.tablehistoryreviews' | translate }}</a></li>
-              <li><a routerLink="/payment">{{ 'header.transactions' | translate }}</a></li>
-              <li><a routerLink="/partners">{{ 'header.partners' | translate }}</a></li>
-              <li><a routerLink="/user/settings">{{ 'header.user-settings' | translate }}</a></li>
               <li><a routerLink="/prepaid-card">{{ 'header.prepaid-card' | translate }}</a></li>
+              <li><a routerLink="/partners">{{ 'header.partners' | translate }}</a></li>
+              <li><a routerLink="/payment">{{ 'header.transactions' | translate }}</a></li>
+              <li><a routerLink="/landingmagazine">{{ 'header.landingmagazine' | translate }}</a></li>
               <li><a routerLink="/discount">{{ 'header.discount' | translate }}</a></li>
-              <li><a (click)="openDSus()">диалог success</a></li>
+
+
+              <!--<li><a href="#">{{ 'header.dropdown-data1' | translate }}</a></li>-->
+              <!--<li><a href="#">{{ 'header.dropdown-data2' | translate }}</a></li>-->
+              <!--<li><a href="#">{{ 'header.dropdown-data3' | translate }}</a></li>-->
+              <!--<li><a routerLink="/feesdiscount">{{ 'feesdiscount' | translate }}</a></li>-->
+
+              <!--<li></li>-->
+              <!--<li><a routerLink="/landingmagazine">{{ 'header.landingmagazine' | translate }}</a></li>-->
+              <!--<li><a routerLink="/tablehistory">{{ 'header.tablehistory' | translate }}</a></li>-->
+              <!--<li><a routerLink="/tablehistoryreviews">{{ 'header.tablehistoryreviews' | translate }}</a></li>-->
+              <!--<li><a routerLink="/partners">{{ 'header.partners' | translate }}</a></li>-->
+              <!--<li><a routerLink="/user/settings">{{ 'header.user-settings' | translate }}</a></li>-->
+              <!--<li><a routerLink="/prepaid-card">{{ 'header.prepaid-card' | translate }}</a></li>-->
+              <!--<li><a (click)="openDSus()">диалог success</a></li>-->
             </ul>
           </li>
         </ul>
@@ -36,7 +42,7 @@
 
       <div class="header-btn">
         <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" *ngIf="!loggedUser" (click)="openDialogReg($event)">{{ 'header.guest-registr-btn' | translate }}</a>
-        <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" *ngIf="loggedUser" (click)="openDialogReg($event)">{{'header.user-transactions-btn' | translate }}</a>
+        <a routerLink="/tablehistoryreviews" class="btn btn-border btn-border_accent rippler rippler-default" *ngIf="loggedUser">{{'header.user-transactions-btn' | translate }}</a>
         <a href="#" class="btn btn-accent rippler rippler-default" *ngIf="!loggedUser" (click)="openDialogAuth($event)">{{ 'header.guest-login-btn' | translate }}</a>
 
         <div class="dropdown" *ngIf="loggedUser">
@@ -46,7 +52,7 @@
               <li><a routerLink="/user/settings">{{ 'header.user-dropdownlist.link1' | translate }}</a></li>
               <li><a routerLink="/tablehistory">{{ 'header.user-dropdownlist.link2' | translate }}</a></li>
               <li><a routerLink="/partners">{{ 'header.user-dropdownlist.link3' | translate }}</a></li>
-              <li><a href="#">{{ 'header.user-dropdownlist.link4' | translate }}</a></li>
+              <!--<li><a href="#">{{ 'header.user-dropdownlist.link4' | translate }}</a></li>-->
             </ul>
             <hr class="full-width">
             <a href="#" (click)="btnLogout($event)" class="logout">Log Out</a>
