--- a/src/app/prepaid-card/prepaid-card.component.html
+++ b/src/app/prepaid-card/prepaid-card.component.html
@@ -6,9 +6,7 @@
         <div class="title"><h1 class="h1">Prepaid Card</h1></div>
 
         <div class="sub-title">
-          <p class="p_large pre-line">
-            {{ 'prepaid-card.sub-head' | translate }}
-          </p>
+          <p class="p_large pre-line">{{ 'prepaid-card.sub-head' | translate }}</p>
         </div>
 
       </header>
