--- a/src/assets/sass/progress-bar.sass
+++ b/src/assets/sass/progress-bar.sass
@@ -1,25 +1,30 @@
 
 .progress-bar
-	height: 4rem
-	width: 100%
-	border: 1px solid #B7BECE;
-	background-color: #F1F3F6
-	border-radius: 3px;
-	margin: 2rem auto
-	&.red
-		border: 1px solid #AC1700;
-	> span
-		> span
-			display: -webkit-flex
-			display: -moz-flex
-			display: -ms-flex
-			display: -o-flex
-			display: flex
-			align-items: center
-			justify-content: center
-			color: #fff
-			font-family: 'PT Sans', sans-serif
-
+  height: 4rem
+  width: 100%
+  border: 1px solid #B7BECE
+  background-color: #efefef
+  border-radius: 3px;
+  margin: 2rem auto
+  > span
+    > span
+      display: -webkit-flex
+      display: -moz-flex
+      display: -ms-flex
+      display: -o-flex
+      display: flex
+      align-items: center
+      justify-content: center
+      color: #fff
+      font-family: 'PT Sans', sans-serif
+      &._dark
+        color: #464950
+  &.red
+    border: 1px solid #AC1700;
+  &.green
+    > span
+      transition: all 1.2s ease
+      width: 0
 
 .progress-bar
   position: relative
@@ -30,7 +35,7 @@
     background-color: rgb(43, 194, 83)
     background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, rgb(43, 194, 83)), color-stop(1, rgb(84, 240, 84)))
     background-image: -moz-linear-gradient(center bottom, rgb(43, 194, 83) 37%, rgb(84, 240, 84) 69%)
-    position: relative
+    //position: relative
     overflow: hidden
     &:after
       content: ""
